<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".league.view.fragment.StandingFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/indogo"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/team"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|end"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/st_team"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:text="@string/p"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:text="@string/w"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:text="@string/d"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/gf_ga"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:text="@string/pts"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_standing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card"
            android:nestedScrollingEnabled="false"
            android:paddingTop="20dp" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>