<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".player.view.PlayerDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="30dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="75dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/player_avatar"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:padding="5dp"
                    tools:src="@drawable/player_placeholder" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/player_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Player on Team" />

        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-25dp"
                app:cardBackgroundColor="@color/bg"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="25dp"
                    android:paddingBottom="25dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/grey"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:text="@string/name"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/player_name_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Name Player on Team" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:text="@string/position"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/player_position"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Goalkeeper" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@color/grey"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:text="@string/born"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/player_born"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="19 December 2019" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:text="@string/number"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/player_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="19" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@color/grey"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:text="@string/height"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/player_height"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="192 cm " />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/player_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:paddingTop="30dp"
                        android:paddingBottom="20dp"
                        android:textSize="16sp"
                        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </FrameLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>